--- a/index.html
+++ b/index.html
@@ -253,7 +253,7 @@
         <div class="instruction">
             Klicken Sie bei Übereinstimmung den grünen Button an!<br>
             Im anderen Fall klicken Sie den roten Button an!<br>
-            Achtung: Wenn das untere Symbol === (drei Balken) ist und === oben vorkommt, ist die Antwort normalerweise Ja (grün). Aber wenn das Sonderzeichen >= unter dem === oben erscheint, ist die Antwort Nein (rot)!
+            Achtung: Wenn das untere Symbol mit einem der oberen Symbole übereinstimmt, ist die Antwort normalerweise Ja (grün). Aber wenn das Sonderzeichen >= unter dem passenden oberen Symbol erscheint, sind die Symbole nicht gleich, und die Antwort ist Nein (rot)!
         </div>
 
         <div class="buttons">
@@ -271,7 +271,6 @@
         // Symbolpool basierend auf dem Bild
         const symbolPool = ['*', '||', '===', '+', '[]'];
         const specialSymbol = '>='; // Das Sonderzeichen
-        const threeLinesSymbol = '==='; // Symbol mit drei Balken
 
         // Globale Variablen
         let tasks = [];
@@ -367,18 +366,14 @@
             // Prüfen, ob das untere Symbol in den oberen Symbolen vorkommt
             let correct = task.topShapes.includes(task.bottomShapes[0]);
 
-            // Sonderregel: Wenn das untere Symbol === ist und === oben vorkommt
-            const bottomIsThreeLines = task.bottomShapes[0] === threeLinesSymbol;
-            const topHasThreeLines = task.topShapes.includes(threeLinesSymbol);
-            const threeLinesIndex = task.topShapes.indexOf(threeLinesSymbol);
-            const specialSymbolUnderThreeLines = threeLinesIndex === task.specialSymbolPosition;
+            // Sonderregel: Wenn das untere Symbol mit einem oberen Symbol übereinstimmt und das Sonderzeichen unter diesem oberen Symbol ist
+            const bottomSymbol = task.bottomShapes[0];
+            const matchingSymbolIndex = task.topShapes.indexOf(bottomSymbol);
+            const specialSymbolUnderMatchingSymbol = matchingSymbolIndex === task.specialSymbolPosition;
 
-            if (bottomIsThreeLines && topHasThreeLines) {
-                if (specialSymbolUnderThreeLines) {
-                    correct = false;
-                } else {
-                    correct = true;
-                }
+            if (matchingSymbolIndex !== -1 && specialSymbolUnderMatchingSymbol) {
+                // Sonderzeichen unter dem passenden Symbol → Symbole sind nicht gleich
+                correct = false;
             }
 
             const userCorrect = (correct && userSaysYes) || (!correct && !userSaysYes);
